Update docker compose file for flow

--- a/docker-files/flow/Dockerfile
+++ b/docker-files/flow/Dockerfile
@@ -7,7 +7,6 @@ WORKDIR app
 RUN apt-get update \
   && apt-get install -y curl
 
-ADD init.sh /app/init.sh
-ADD flow.json /app/flow.json
-ADD contracts /app/contracts
-RUN chmod +x /app/init.sh
+RUN sh -ci "$(curl -fsSL https://raw.githubusercontent.com/onflow/flow-cli/master/install.sh)"
+RUN echo 'export PATH="$PATH:/root/.local/bin"' >>~/.bashrc
+CMD ["/root/.local/bin/flow", "emulator", "--contracts", "true"]
