Build bal container from source code

--- a/docker-files/bal/Dockerfile
+++ b/docker-files/bal/Dockerfile
@@ -9,7 +9,7 @@ COPY blockchain-access-layer.war .
 
 # Download and install Apache Tomcat 8
 RUN apt-get update && \
-    apt-get install -y wget && \
+    apt-get install -y wget maven && \
     wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.56/bin/apache-tomcat-8.5.56.tar.gz && \
     tar xzf apache-tomcat-8.5.56.tar.gz && \
     mv apache-tomcat-8.5.56 tomcat
@@ -18,7 +18,11 @@ RUN apt-get update && \
 RUN rm apache-tomcat-8.5.56.tar.gz
 
 # Copy the WAR file to the Tomcat webapps directory
-RUN mv blockchain-access-layer.war tomcat/webapps/
+# RUN mv blockchain-access-layer.war tomcat/webapps/
+
+RUN git clone --depth 1 --branch v2.0.0 https://github.com/TIHBS/BlockchainAccessLayer.git
+#
+RUN cd /app/BlockchainAccessLayer && mvn clean install && mv target/blockchain-access-layer.war /app/tomcat/webapps/
 
 RUN mkdir /app/plugins
 
